# myc

./: .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  README.html  README.md  README.org  test.txt
src/: AST.cpp  AST.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Generator.cpp  Generator.h  Parser.cpp  Parser.h  Reader.h  RegisterAllocator.cpp  RegisterAllocator.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  analysis.cpp  analysis.h  ast.cpp  ast.h  diagnostic.cpp  diagnostic.h  error.cpp  error.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
src/AST/: AST.cpp  AST.h  CMakeLists.txt
src/CodeGen/: CMakeLists.txt
src/CodeGen/IR/: Addr.cpp  Addr.h  CMakeLists.txt  Generator.cpp  Generator.h  Instruct.cpp  Instruct.h
src/CodeGen/Targets/: CMakeLists.txt  Generator.h  X86.cpp  X86.h
src/Lex/: CMakeLists.txt  Scanner.cpp  Scanner.h  Token.cpp  Token.h
src/Parse/: CMakeLists.txt  Parser.cpp  Parser.h
src/Symbol/: CMakeLists.txt  SymTable.cpp  SymTable.h  Symbol.cpp  Symbol.h
src/analysis/: CMakeLists.txt  nameresolution.cpp  nameresolution.h  printast.cpp  printast.h  symtable.cpp  symtable.h  visitor.cpp  visitor.h
src/ast/: CMakeLists.txt  ast.h  binexp.cpp  binexp.h  expr.h  intlit.cpp  intlit.h  node.h  unaryexp.cpp  unaryexp.h
tests/: scanner.cpp
